# XBlossom-SIGMETRICS27-AE

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/xb/: .gitignore  CMakeLists.txt  Makefile  README.md
apps/xb/benchmark/: CMakeLists.txt
apps/xb/benchmark/xblsm_cpu/: CMakeLists.txt  benchmark_xblsm_cpu_pro.cu
apps/xb/benchmark/xblsm_gpu/: CMakeLists.txt  benchmark_xblsm_gpu_10.cu  benchmark_xblsm_gpu_11.cu  benchmark_xblsm_gpu_9.cu
apps/xb/expr/: clean_all.sh  runme.sh
apps/xb/expr/benchmark/: benchmark_all.sh  run_cpu_all_datasets.sh  run_cpu_all_datasets_stalling.sh  run_gpu_all_datasets.sh  run_gpu_all_datasets_stalling.sh
apps/xb/expr/common/: common.sh
apps/xb/expr/datasets/: RUN_graph_metrics.py  RUN_graph_metrics.sh  download_dataset.py  download_realworld_datasets.sh  generate_src_lists.py  generate_src_lists.sh  to_gunrock_mm.sh  to_ligra_adj.sh
apps/xb/expr/gunrock/: RUN_gunrock_bfs_all_datasets_dram_read.sh  RUN_gunrock_bfs_all_datasets_dram_read_analysis.py  gunrock_bfs_profile_analyzer_indep.py  run_gunrock_bfs.sh  run_gunrock_bfs_all_datasets_indep.sh
apps/xb/expr/install/: install_all.sh  install_gflags.sh  install_glog.sh  install_gtest.sh  install_gunrock.sh  install_ligra_openmp.sh  install_python.sh
apps/xb/expr/ligra/: RUN_ligra_bfs_all_datasets_intel.sh  RUN_ligra_bfs_all_datasets_intel_1src.sh  RUN_ligra_bfs_all_datasets_intel_1src_inst.sh  RUN_ligra_bfs_all_datasets_intel_1src_inst_branch.sh  RUN_ligra_bfs_all_datasets_intel_1src_inst_llc_count.sh  RUN_ligra_bfs_all_datasets_intel_1src_inst_llc_count_analyze.py  RUN_ligra_bfs_all_datasets_intel_1src_inst_llc_count_cycles.sh  RUN_ligra_bfs_all_datasets_intel_1src_inst_llc_count_cycles_analyze.py  RUN_ligra_bfs_all_datasets_intel_1src_inst_loadbalance.sh  RUN_ligra_bfs_all_datasets_intel_1src_inst_lock.sh  RUN_ligra_bfs_all_datasets_intel_1src_inst_misses.sh  RUN_ligra_bfs_all_datasets_intel_analyze.py  RUN_ligra_bfs_all_datasets_intel_inst_analyze.py  RUN_ligra_bfs_all_datasets_intel_inst_branch_analyze.py  RUN_ligra_bfs_all_datasets_intel_inst_lock_analyze.py  RUN_ligra_cc_all_datasets_intel.sh  RUN_ligra_cc_all_datasets_intel_analyze.py
apps/xb/expr/paper/: run_cpu_loadbalance_all_datasets.py  run_cpu_loadbalance_all_datasets.sh  run_gpu_loadbalance_all_datasets.py  run_gpu_loadbalance_all_datasets.sh  run_gpu_loadbalance_hybrid2_all_datasets.sh  run_gpu_loadbalance_hybrid_all_datasets.py  run_gpu_loadbalance_hybrid_all_datasets.sh
apps/xb/expr/profiling/: aggregate_cpu_gpu_bw.py  aggregate_cpu_gpu_inst.py  aggregate_cpu_gpu_warp_inst.py  gpu_dram_bytes_read_aggregator.py  gpu_thread_inst_aggregator.py  gpu_warp_inst_aggregator.py  run_aggregate_cpu_gpu_bw.sh  run_aggregate_cpu_gpu_inst.sh  run_cpu_all_datasets_inst.sh  run_cpu_all_datasets_mem_bw.sh  run_cpu_one_datasets_mem_bw.sh  run_gpu_all_datasets_inst.sh  run_gpu_all_datasets_mem_bw.sh  run_gpu_one_datasets_mem_bw.sh
apps/xb/expr/visualize/: add_efficiency_ratios.py  aggregate_cpu_gpu_results.py  analyze_cpu_profile.py  analyze_gpu_profile.py  node_edge_inst_speedups.py  xb_bfs_speedups.py  xb_bfs_speedups_norm.py
apps/xb/expr/xb_pp/: RUN_xb_pp.sh  RUN_xb_pp_dram_read.sh  RUN_xb_pp_dram_read_analyze.py  RUN_xb_pp_dram_read_stalled_cycles.sh  RUN_xb_pp_dram_read_stalled_cycles_analyze.py  RUN_xb_pp_r_nr.sh  __NOUSE__run_xb_pp_all_datasets_all.sh  __NOUSE__run_xb_pp_all_datasets_indep.sh  __NOUSE__xb_pp_profile_analyzer_all.py  __NOUSE__xb_pp_profile_analyzer_indep.py
apps/xb/expr/xb_pro/: RUN_xb_all_datasets_intel_inst_llc_count.sh  RUN_xb_and_xb_pro.py  RUN_xb_and_xb_pro.sh  RUN_xb_pro_all_datasets_intel.sh  RUN_xb_pro_all_datasets_intel_analysis.py  RUN_xb_pro_all_datasets_intel_inst.sh  RUN_xb_pro_all_datasets_intel_inst_analysis.py  RUN_xb_pro_all_datasets_intel_inst_branch.sh  RUN_xb_pro_all_datasets_intel_inst_branch_analysis.py  RUN_xb_pro_all_datasets_intel_inst_llc_count.sh  RUN_xb_pro_all_datasets_intel_inst_llc_count_cycles.sh  RUN_xb_pro_all_datasets_intel_inst_llc_count_cycles_analysis.py  RUN_xb_pro_all_datasets_intel_inst_loadbalance.sh  RUN_xb_pro_all_datasets_intel_inst_lock.sh  RUN_xb_pro_all_datasets_intel_inst_lock_analysis.py  RUN_xb_pro_all_datasets_intel_inst_misses.sh  RUN_xb_pro_na_all_datasets_intel_inst_llc_count.sh  RUN_xb_pro_nab_all_datasets_intel_inst_llc_count.sh  RUN_xb_pro_nb_all_datasets_intel_inst_llc_count.sh  RUN_xb_pro_peredge_all_datasets_intel_inst_llc_count.sh  RUN_xb_pro_peredge_na_all_datasets_intel_inst_llc_count.sh  RUN_xb_pro_peredge_nb_all_datasets_intel_inst_llc_count.sh  RUN_xb_pro_peredge_nb_all_datasets_intel_inst_llc_count_analysis.py  __NOUSE__analyze_xb_pro_profile_diff.py  __NOUSE__analyze_xb_pro_profile_simple.py  __NOUSE__run_xb_pro_all_datasets_diff.sh  __NOUSE__run_xb_pro_all_datasets_dispatch_osc.sh  __NOUSE__run_xb_pro_all_datasets_dy.sh  __NOUSE__run_xb_pro_all_datasets_simple_osc.sh
apps/xb/runner/: CMakeLists.txt
apps/xb/runner/xblsm_cpu/: CMakeLists.txt  run_xb_by_dataset.cu  run_xb_pro_by_dataset.cu  run_xb_pro_peredge_by_dataset.cu  run_xb_pro_peredge_na_by_dataset.cu  run_xb_pro_peredge_nb_by_dataset.cu  run_xb_pro_pernode_by_dataset.cu  run_xb_pro_pernode_na_by_dataset.cu  run_xb_pro_pernode_nab_by_dataset.cu  run_xb_pro_pernode_nb_by_dataset.cu
apps/xb/runner/xblsm_gpu/: CMakeLists.txt  run_xb_pp_by_dataset.cu  run_xb_pp_hybrid2_by_dataset.cu  run_xb_pp_hybrid_by_dataset.cu  run_xb_pp_nr_by_dataset.cu  run_xb_pp_peredge_by_dataset.cu  run_xb_pp_pernode_by_dataset.cu
apps/xb/src/: CMakeLists.txt
apps/xb/src/flag/: flag.cc
apps/xb/src/include/: flag.h
apps/xb/src/xblsm_cpu/: CMakeLists.txt  functions.cu  functions_for_par_0.cu  functions_for_par_1.cu  functions_for_par_2.cu  par_200.cu  par_pro_1.cu  par_pro_2.cu  par_pro_3.cu  par_pro_all_atomic.cu  par_pro_peredge.cu  par_pro_peredge_na.cu  par_pro_peredge_nb.cu  par_pro_pernode.cu  par_pro_pernode_na.cu  par_pro_pernode_nab.cu  par_pro_pernode_nb.cu  test_par_200.cu  test_par_pro_1.cu  test_par_pro_2.cu  test_par_pro_3.cu  test_par_pro_all_atomic.cu  (+8 more)
apps/xb/test/: CMakeLists.txt
(+624 files in other folders)
